# code128-encoder-cpp

./: .gitignore  CMakeLists.txt  Cd128Encoder.cpp  Cd128Encoder.h  LICENSE  README.md  Validator.cpp  Validator.h  mein.cpp  tests.cpp
